adicionando os elementos para pinta através da paleta de cores

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: gray;
 }
 
 h1 {
@@ -8,24 +7,24 @@ h1 {
 }
 
 #color-palette {
-  border: 1px solid black;
   height: 106px;
-  width: 476px;
+  width: 436px;
   margin: auto;
   position: relative;
   top: 40px;
 }
 
 .color {
-  border: 1px solid black;
+  border: 1px solid black; /* requisito 2 */
   height: 100px;
-  width: 110px;
+  width: 100px;
   display: inline-block;
-  margin: 2px;
+  margin: 0;
+  border-radius: 50%;
 }
 
 .color:nth-child( 1 ) {
-  background-color: black;
+  background-color: black; /* requisito 3 */
 }
 
 .color:nth-child( 2 ) {
@@ -38,4 +37,23 @@ h1 {
 
 .color:nth-child( 4 ) {
   background-color: green;
+}
+
+#quadro-negro {
+  position: relative;
+  top: 90px;
+  margin: auto;
+  width: 570px;
+  height: 530px;
+}
+
+.square {
+  border: 1px solid black;
+  width: 140px;
+  height: 130px;
+  display: inline-block;
+  position: relative;
+  left: 3px;
+  top: 3px;
+  margin: -2px;
 }
