--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@ h1 {
 #color-palette {
   height: 106px;
   width: 436px;
-  margin: auto;
+  margin-left: 36%;
   position: relative;
-  top: 40px;
+  top: 10px;
 }
 
 .color {
   border: 1px solid black; /* requisito 2 */
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 80px;
   display: inline-block;
   margin: 0;
   border-radius: 50%;
@@ -40,26 +40,25 @@ h1 {
 }
 
 #button-random-color {
+  margin-left: 68%;
+  margin-bottom: 25px;
+  padding: 4px;
   position: relative;
-  left: 1250px;
-  bottom: 20px;
+  left: 50px;
 }
 
-#quadro-negro {
-  position: relative;
-  top: 90px;
+#pixel-board {
   margin: auto;
-  width: 570px;
-  height: 530px;
+  width: 422px;
+  height: 372px;
 }
 
-.square {
+.pixel {
   border: 1px solid black;
-  width: 140px;
-  height: 130px;
+  background-color: white;
+  width: 80px;
+  height: 70px;
+  box-sizing: border-box;
   display: inline-block;
-  position: relative;
-  left: 3px;
-  top: 3px;
   margin: -2px;
 }
