--- a/style.css
+++ b/style.css
@@ -1,23 +1,24 @@
-body {
+* {
   margin: 0;
 }
 
-h1 {
+#title {
   text-align: center;
+  margin: 20px 0;
 }
 
 #color-palette {
-  height: 106px;
-  width: 436px;
-  margin-left: 36%;
+  height: auto;
+  width: max-content;
+  margin: auto;
   position: relative;
   top: 10px;
 }
 
 .color {
   border: 1px solid black; /* requisito 2 */
-  height: 80px;
-  width: 80px;
+  height: 60px;
+  width: 60px;
   display: inline-block;
   margin: 0;
   border-radius: 50%;
@@ -40,17 +41,14 @@ h1 {
 }
 
 #button-random-color {
-  margin-left: 68%;
-  margin-bottom: 25px;
+  margin: 20px 0;
   padding: 4px;
-  position: relative;
-  left: 50px;
 }
 
 #pixel-board {
   margin: auto;
-  width: 410px;
-  height: 360px;
+  width: 210px;
+  height: 210px;
   border: 1px solid black;
 }
 
