--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
 
 #title {
   text-align: center;
-  margin: 20px 0;
+  margin: 20px auto;
+  width: max-content;
+
 }
 
 #color-palette {
   height: auto;
   width: max-content;
   margin: auto;
-  position: relative;
-  top: 10px;
 }
 
 .color {
@@ -20,7 +20,6 @@
   height: 60px;
   width: 60px;
   display: inline-block;
-  margin: 0;
   border-radius: 50%;
 }
 
@@ -40,9 +39,21 @@
   background-color: green;
 }
 
+#buttons {
+  margin: 15px auto;
+  width: max-content;
+}
+
+#buttons div {
+  display: inline-block;
+}
+
 #button-random-color {
-  margin: 20px 0;
-  padding: 4px;
+  padding: 4px 5px;
+}
+
+#clear-board {
+  padding: 4px 30px;
 }
 
 #pixel-board {
