--- a/style.css
+++ b/style.css
@@ -2,99 +2,102 @@
   margin: 0;
 }
 
-#title {
-  text-align: center;
-  margin: 20px auto;
-  width: max-content;
+body {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  row-gap: 1.5rem;
+  position: relative;
+  inset: 0;
+  height: 100vh;
+  z-index: 1;
 }
 
-#color-palette {
-  height: auto;
-  width: max-content;
-  margin: auto;
+body::before {
+  position: absolute;
+  inset: 0;
+  content: '';
+  background: url('./background.jpg') no-repeat;
+  background-size: cover;
+  opacity: 0.25;
+  z-index: 0;
+}
+
+#title {
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1rem;
+  position: relative;
+  z-index: 1;
 }
 
 .color {
-  border: 1px solid black; /* requisito 2 */
-  height: 60px;
-  width: 60px;
   display: inline-block;
+  width: 60px;
+  height: 60px;
+  border: 1px solid black;
+  background-color: white;
   border-radius: 50%;
 }
 
-.color:nth-child( 1 ) {
-  background-color: black; /* requisito 3 e 8 */
-}
-
-.color:nth-child( 2 ) {
-  background-color: red;
-}
-
-.color:nth-child( 3 ) {
-  background-color: blue;
-}
-
-.color:nth-child( 4 ) {
-  background-color: green;
-}
-
-.buttons {
-  margin: 15px auto;
-  width: max-content;
-}
-
-.buttons div {
-  display: inline-block;
-}
-
 #button-random-color {
-  padding: 4px 5px;
+  height: 2.5rem;
+  padding: 2px 1rem;
+  font-size: 11pt;
 }
 
-#board-size {
-  width: 229px;
+#clear-board {
+  height: 2.5rem;
+  padding: 2px 2rem;
+  font-size: 11pt;
+}
+
+#generate-board {
+  height: 2.5rem;
+  padding: 2px 2rem;
+  font-size: 11pt;
+}
+
+#input-size-pixels {
+  width: 17rem;
   height: 21px;
+  padding: 5px;
   border-radius: 5px;
   border: 1.6px solid rgba(0, 0, 0, 0.74);
 }
 
-#input-number {
+#container-input-number {
+  position: relative;
+}
+
+#message-input {
   position: absolute;
-  left: calc(50% - 145px);
-  top: 189px;
+  top: -11px;
+  left: 7px;
+  padding: 0 2px;
   background-color: white;
-  width: 157px;
-  height: max-content;
   font-size: 15.5px;
   text-align: center;
   border-radius: 0;
 }
 
-input::placeholder {
-  font-style: italic;
-  font-size: smaller;
-}
-
-#clear-board {
-  padding: 4px 30px;
-}
-
-#generate-board {
-  padding: 4px 30px;
-}
-
 #pixel-board {
-  margin: auto;
+  display: flex;
+  flex-flow: row wrap;
   width: calc(42px * 5);
   height: calc(42px * 5);
   border: 1px solid black;
 }
 
 .pixel {
-  border: 1px solid black; /* requisito 7 */
+  border: 1px solid black;
   background-color: white;
-  width: 40px; /* requisito 7 */
-  height: 40px; /* requisito 7 */
-  display: block;
-  float: left;
+  width: 40px;
+  height: 40px;
 }
